@@ -89,6 +89,7 @@ Added:
 - Added shell flight and falling sounds for big cannon projectiles
 - Added flyby sounds for autocannon and machine gun projectiles
 - Added new shell explosion visual and sound effects
+- Added global wind for projectile explosion and Smoke Shell effects
 Removed:
 - Removed legacy cannon plume appearance client config, can now only turn plumes on or off in clientside config
 - Removed single-projectile shrapnel, grapeshot, and fluid blob entities
